--- a/env.yml
+++ b/env.yml
@@ -21,9 +21,9 @@ dependencies:
   - brotli-bin=1.0.9=h5eee18b_7
   - brotlipy=0.7.0=py310h7f8727e_1002
   - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2022.12.7=ha878542_0
+  - ca-certificates=2023.01.10=h06a4308_0
   - catalogue=2.0.8=py310hff52083_1
-  - certifi=2022.12.7=pyhd8ed1ab_0
+  - certifi=2022.12.7=py310h06a4308_0
   - cffi=1.15.1=py310h5eee18b_3
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
   - colorama=0.4.6=pyhd8ed1ab_0
@@ -42,14 +42,17 @@ dependencies:
   - executing=0.8.3=pyhd3eb1b0_0
   - expat=2.4.9=h6a678d5_0
   - fftw=3.3.9=h27cfd23_1
+  - filelock=3.9.0=py310h06a4308_0
   - flit-core=3.6.0=pyhd3eb1b0_0
   - fontconfig=2.14.1=h52c9d5c_1
   - fonttools=4.25.0=pyhd3eb1b0_0
   - freetype=2.12.1=h4a9f257_0
+  - future=0.18.2=py310h06a4308_1
   - giflib=5.2.1=h5eee18b_3
   - glib=2.69.1=he621ea3_2
   - gst-plugins-base=1.14.0=h8213a91_2
   - gstreamer=1.14.0=h28cd5cc_2
+  - huggingface_hub=0.10.1=py310h06a4308_0
   - icu=58.2=he6710b0_3
   - idna=3.4=py310h06a4308_0
   - intel-openmp=2021.4.0=h06a4308_3561
@@ -93,6 +96,7 @@ dependencies:
   - libllvm10=10.0.1=hbcb73fb_5
   - libpng=1.6.37=hbc83047_0
   - libpq=12.9=h16c4e8d_3
+  - libprotobuf=3.20.3=he621ea3_0
   - libsodium=1.0.18=h7b6447c_0
   - libstdcxx-ng=11.2.0=h1234567_1
   - libtiff=4.5.0=h6a678d5_1
@@ -122,6 +126,8 @@ dependencies:
   - nbformat=5.7.0=py310h06a4308_0
   - ncurses=6.4=h6a678d5_0
   - nest-asyncio=1.5.6=py310h06a4308_0
+  - ninja=1.10.2=h06a4308_5
+  - ninja-base=1.10.2=hd09550d_5
   - nltk=3.7=pyhd3eb1b0_0
   - notebook=6.5.2=py310h06a4308_0
   - notebook-shim=0.2.2=py310h06a4308_0
@@ -163,7 +169,9 @@ dependencies:
   - python-dateutil=2.8.2=pyhd3eb1b0_0
   - python-fastjsonschema=2.16.2=py310h06a4308_0
   - python_abi=3.10=2_cp310
+  - pytorch=1.12.1=cpu_py310hb1f1ab4_1
   - pytz=2022.7=py310h06a4308_0
+  - pyyaml=6.0=py310h5eee18b_1
   - pyzmq=23.2.0=py310h6a678d5_0
   - qt-main=5.15.2=h327a75a_7
   - qt-webengine=5.15.9=hd2b0992_4
@@ -196,11 +204,13 @@ dependencies:
   - threadpoolctl=2.2.0=pyh0d69192_0
   - tinycss2=1.2.1=py310h06a4308_0
   - tk=8.6.12=h1ccaba5_0
+  - tokenizers=0.11.4=py310h3dcd8bd_1
   - toml=0.10.2=pyhd3eb1b0_0
   - tomli=2.0.1=py310h06a4308_0
   - tornado=6.2=py310h5eee18b_0
   - tqdm=4.64.1=py310h06a4308_0
   - traitlets=5.7.1=py310h06a4308_0
+  - transformers=4.24.0=py310h06a4308_0
   - typer=0.4.2=pyhd8ed1ab_0
   - typing-extensions=4.4.0=py310h06a4308_0
   - typing_extensions=4.4.0=py310h06a4308_0
@@ -213,6 +223,7 @@ dependencies:
   - wheel=0.38.4=py310h06a4308_0
   - widgetsnbextension=3.5.2=py310h06a4308_0
   - xz=5.2.10=h5eee18b_1
+  - yaml=0.2.5=h7b6447c_0
   - zeromq=4.3.4=h2531618_0
   - zlib=1.2.13=h5eee18b_0
   - zstd=1.5.2=ha4553b6_0
@@ -220,5 +231,6 @@ dependencies:
       - click==8.1.3
       - en-core-web-sm==3.3.0
       - pydantic==1.8.2
+      - pymupdf==1.21.1
       - pyqt5-sip==12.11.0
 prefix: /home/majime/miniconda3/envs/info_retrieval
