made autocomplete better with inflections

--- a/env.yml
+++ b/env.yml
@@ -230,6 +230,7 @@ dependencies:
   - pip:
       - click==8.1.3
       - en-core-web-sm==3.3.0
+      - lemminflect==0.2.3
       - pydantic==1.8.2
       - pymupdf==1.21.1
       - pyqt5-sip==12.11.0
