added main readme

--- a/env.yml
+++ b/env.yml
@@ -1,4 +1,4 @@
-name: info_retrieval
+name: search_engine
 channels:
   - conda-forge
   - defaults
@@ -234,4 +234,3 @@ dependencies:
       - pydantic==1.8.2
       - pymupdf==1.21.1
       - pyqt5-sip==12.11.0
-prefix: /home/majime/miniconda3/envs/info_retrieval
