--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-	"python.analysis.typeCheckingMode": "off"
+	"python.analysis.typeCheckingMode": "off",
+	"cSpell.words": [
+		"lemminflect",
+		"pdfs",
+		"pyth",
+		"thon"
+	]
 }
