some more documentation spelling mistakes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,12 @@
 {
 	"python.analysis.typeCheckingMode": "off",
 	"cSpell.words": [
+		"fitz",
 		"lemminflect",
+		"lemmitization",
 		"pdfs",
 		"pyth",
+		"spacy",
 		"thon"
 	]
 }
